# AgroPlan

./: .flaskenv  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  agroplan.py  config.py  pyproject.toml  requirements.txt  requirements_dev.txt
app/: app.py  cli.py  database_tester.py  email.py  extensions.py  model_tester.py  sample.py  scratch_tester.py  tester.py
app/api/: __init__.py  edit_forms.py  forms.py  routes.py
app/auth/: email.py  forms.py  routes.py
app/database/: __init__.py  base.py  conversions.py  database.py  model.py  sample_model.py  setup.py  types.py  utils.py
app/errors/: handlers.py
app/gui/: model.py  tableview_model.py  treeview_model.py  utils.py  view.py  view_py.py
app/gui/views/: dialog.py  mainwindow.py
app/main/: forms.py  routes.py
app/model/: __init__.py  balance.py  crop.py  cultivation.py  edit_forms.py  fertilization.py  fertilizer.py  field.py  forms.py  guidelines.py  planning.py  soil.py
app/modules/: utils.py
app/static/: manifest.json  style.css
app/static/css/: _test.css  preset_style.css  style.css
app/static/js/: field.js  fields.js  index.js  main.js  modal.js  preset.js  request.js  sidebar.js  toast.js
app/static/multiselect-dropdown/: multiselect-dropdown.js
app/templates/: _crop.html  _field.html  _field_crop.html  _field_demand.html  _field_fertilization.html  _field_modifiers.html  _field_soil.html  _fields_base_fields.html  _fields_field.html  _fields_field_create.html  _fields_field_edit.html  _index_fields.html  _lists_form.html  _lists_table.html  _post.html  _test.html  base.html  crops.html  edit_profile.html  fertilizers.html  field.html  field_footer.html  fields.html  footer.html  index.html  layout.html  lists.html  modal.html  modal_content.html  navbar.html  preset.html  sidebar.html  user.html  user_popup.html  utils.html
app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
app/templates/auth/email/: reset_password.html  reset_password.txt
app/templates/errors/: 401.html  404.html  500.html
app/templates/field/: _field_demand.html  _field_fertilization.html  _field_modifier.html  _field_soil.html
app/utils/: __init__.py  schlag.py  utils.py
migrations/versions/: 0b803ff60a56_add_demand_options_for_all_nutrients.py  36ffc0998323_change_remains_to_residue.py  4dee7b9bf13f_separate_cultivation_type_and_crop_.py  5cba76e733fe_add_cut_timing_to_fertilization.py  893250897dda_add_set_year_to_user.py  af874f00b129_initial_migration.py  c07676c4b9f1_rename_sub_suffix_to_partition.py  dca09ff667a7_inital_migration.py  f808a24f39c6_remove_many_to_many_relationships_.py  fc9602c1c08b_add_modifiers_to_field.py
qtdesigner/: convert.py  dialog.ui  dialog_old.ui  mainwindow.ui  mainwindow_2.ui  mainwindow_3.ui
qtdesigner/AgroPlan/: AgroPlan.pyproject  dialog.ui  mainwindow.ui  new_mainwindow.ui  test_window.ui
tests/: conftest.py  test_model.py  test_schlag.py  test_utils.py
tests/database/: test_model_functional.py  test_model_unit.py  test_types.py
tests/functional/: test_model_functions.py
tests/model/: test_balance.py  test_crop.py  test_cultivation.py  test_fertilization.py  test_fertilizer.py  test_field.py  test_guidelines.py  test_soil.py
tests/unit/: test_model.py
