[project]
name = "AgroPlan"
version = "0.1.0"
description = "Plan cultivation and fertilization according to german fertilization laws (DüV)."
authors = [{ name = "Philipp Brockmann", email = "philippbrockmann@gmail.com" }]
requires-python = ">=3.11.4,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "Flask==2.3.2",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Login==0.6.2",
    "Flask-Migrate==4.0.4",
    "Flask-WTF[email]==1.1.1",
    "Bootstrap-Flask==2.2.0",
    "PyJWT==2.7.0",
    "python-dotenv==1.0.0",
    "loguru==0.7.0",
    "flask-mailman==0.3.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.0.0",
    "ruff>=0.14.10",
    "pre-commit>=4.5.1",
    "djlint>=1.36.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
extend-exclude = ["migrations/env.py"]
# force-exclude = true

[tool.ruff.lint]
unfixable = ["F401"]

[tool.ruff.format]
exclude = ["migrations/env.py"]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = ['app']
omit = [
  # omit anything in a .local directory anywhere
  '*/.local/*',
  '__init__.py',
  'tests/*',
  '*/tests/*',
  # omit example and pre-testing files
  '*/sample.py',
  '*/tester.py',
  # omit anything in a .venv directory anywhere
  '.venv/*',
]

[tool.coverage.report]
skip_empty = true
# skip_covered = true
# show_missing = true

[tool.djlint]
indent = 2
ignore = 'H017,T028'
profile = "jinja"
use_gitignore = true
preserve_blank_lines = true
