[project]
name = "AgroPlan"
version = "0.1.0"
description = "Plan cultivation and fertilization according to german fertilization laws (DüV)."
authors = [{ name = "Philipp Brockmann", email = "philippbrockmann@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "bootstrap-flask>=2.5.0,<3",
    "flask>=3.1.2,<4",
    "flask-login>=0.6.3,<1",
    "flask-mailman>=1.1.1,<2",
    "flask-migrate>=4.1.0,<5",
    "flask-sqlalchemy>=3.1.1,<4",
    "flask-wtf[email]>=1.2.2,<2",
    "loguru>=0.7.3,<1",
    "pyjwt>=2.11.0,<3",
    "python-dotenv>=1.2.1,<2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.0,<1",
    "pre-commit>=4.5.1,<5",
    "djlint>=1.36.4,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
extend-exclude = ["migrations/env.py"]
# force-exclude = true

[tool.ruff.lint]
unfixable = ["F401"]

[tool.ruff.format]
exclude = ["migrations/env.py"]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = ['app']
omit = [
  # omit anything in a .local directory anywhere
  '*/.local/*',
  '__init__.py',
  'tests/*',
  '*/tests/*',
  # omit example and pre-testing files
  '*/sample.py',
  '*/tester.py',
  # omit anything in a .venv directory anywhere
  '.venv/*',
]

[tool.coverage.report]
skip_empty = true
# skip_covered = true
# show_missing = true

[tool.djlint]
indent = 2
ignore = 'H017,T028'
profile = "jinja"
use_gitignore = true
preserve_blank_lines = true
